# Serkr

./: Cargo.toml  clippy.toml
src/: main.rs
src/cnf/: ast_transformer.rs  distribute_ors_over_ands.rs  formula_renaming.rs  free_variables.rs  mod.rs  nnf.rs  renaming_info.rs  simplify.rs  standard_cnf.rs  standard_skolemization.rs  variable_renaming.rs
src/prover/: flatten_cnf.rs  proof_search.rs  proof_state.rs  proof_statistics.rs
src/prover/clause_selection/: clause_weight.rs  heuristic.rs  mod.rs  pick_best.rs
src/prover/data_structures/: clause.rs  literal.rs  pd_tree.rs  term.rs
src/prover/inference/: equality_factoring.rs  equality_resolution.rs  maximality.rs  superposition.rs
src/prover/ordering/: kbo.rs  lpo.rs  precedence.rs  term_ordering.rs  weight.rs
src/prover/problem_analysis/: determine_term_ordering.rs
src/prover/simplification/: equality_subsumption.rs  literal_deletion.rs  non_unit_subsumption.rs  rewriting.rs  simplify_reflect.rs  tautology_deletion.rs  unit_subsumption.rs
src/prover/unification/: full_unification.rs  matching.rs  substitution.rs
src/tptp_parser/: mod.rs  parser.rs  parser_grammar.lalrpop
src/utils/: either.rs  macros.rs  mod.rs  stopwatch.rs
